app/globals.css
:root {
    --max-width: 1100px;
    --border-radius: 12px;
    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
        "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
        "Fira Mono", "Droid Sans Mono", "Courier New", monospace;

    --color: 5, 30, 20;
    --color_highlight: 5, 30, 20;
    --themeColor1: 255, 245, 245;
    --themeColor2: 255, 245, 255;
    --tagBg: 250, 255, 250;
    --tagBg_highlight: 50, 205, 50;
    --button_filter: brightness(0.5);

    --primary-glow: conic-gradient(from 180deg at 50% 50%,
            #16abff33 0deg,
            #0885ff33 55deg,
            #54d6ff33 120deg,
            #0071ff33 160deg,
            transparent 360deg);
    --secondary-glow: radial-gradient(rgba(60, 80, 80, 1),
            rgba(255, 255, 255, 1));

    --tile-start-rgb: 239, 245, 249;
    --tile-end-rgb: 228, 232, 233;
    --tile-border: conic-gradient(#00000080,
            #00000040,
            #00000030,
            #00000020,
            #00000010,
            #00000010,
            #00000080);

    --callout-rgb: 238, 240, 241;
    --callout-border-rgb: 172, 175, 176;
    --card-rgb: 180, 185, 188;
    --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
    :root {
        --color: 255, 255, 255;
        --color_highlight: 50, 205, 50;
        --themeColor1: 0, 5, 5;
        --themeColor2: 0, 5, 0;
        --tagBg: 30, 50, 30;
        --tagBg_highlight: 30, 50, 30;
        --button_filter: brightness(1);

        --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
        --secondary-glow: linear-gradient(to bottom right,
                rgba(1, 65, 255, 0),
                rgba(1, 65, 255, 0),
                rgba(1, 65, 255, 0.3));

        --tile-start-rgb: 2, 13, 46;
        --tile-end-rgb: 2, 5, 19;
        --tile-border: conic-gradient(#ffffff80,
                #ffffff40,
                #ffffff30,
                #ffffff20,
                #ffffff10,
                #ffffff10,
                #ffffff80);

        --callout-rgb: 20, 20, 20;
        --callout-border-rgb: 108, 108, 108;
        --card-rgb: 100, 100, 100;
        --card-border-rgb: 200, 200, 200;
    }
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
    scrollbar-color: lime rgb(30, 40, 30);
    scrollbar-width: thin;
    /* font-family: sans-serif; */
}

html,
body {
    max-width: 100vw;
    overflow-x: hidden;
}

body {
    color: rgb(var(--color));
    background: linear-gradient(to bottom,
            transparent,
            rgb(var(--themeColor2))) rgb(var(--themeColor1));
}

main {
    padding-top: 70px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    min-height: calc(100vh - 70px);
    /* border-left: 1px solid lime; */
    /* border-right: 1px solid lime; */
    z-index: 1;
}

a {
    color: lime;
    text-decoration: none;
    /* cursor: pointer; */
}

button {
    cursor: pointer;
}

h1 {
    font-size: 40px;
}

h2 {
    font-size: 30px;
}

h3 {
    font-size: 20px;
}

h4 {
    font-size: 17px;
}

@media (prefers-color-scheme: dark) {
    html {
        color-scheme: dark;
    }
}

@media (prefers-color-scheme: light) {
    html {
        color-scheme: light;
    }
}





/* Mobile */
@media (max-width: 700px) {
    .hideOnMobile {
        display: none !important
    }
}

/* Non-Mobile */
@media (min-width: 701px) {
    .hideOnNonMobile {
        display: none !important
    }
}

/* Desktop */
@media (min-width: 1120px) {
    .hideOnDesktop {
        display: none !important
    }
}

